--- a/server/server/server.csproj
+++ b/server/server/server.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.13" />
+    <PackageReference Include="TypeMerger" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
